contrast fix i hope

--- a/css/style.css
+++ b/css/style.css
@@ -67,6 +67,10 @@ body{
     width=600;
 }
 
+.skip-main{
+	background: white;
+}
+
 li{
 	text-decoration: none;
 	display:inline;
